# entropy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  background.md  debug.cpp  divider_test.cpp  entropy.cpp  entropy.ipynb  entropy.py  entropy_store.hpp  paper.bcf-SAVE-ERROR  paper.synctex(busy)  paper.tex  reference.ipynb  references.bib  sample.cpp  statemachine.cpp  temp.md  testing.hpp  tests.cpp
TIT-LaTeX-template-202312/: IEEEtran-TIT-LaTeX-main.tex  IEEEtran_how-to.tex  one-column.aux  one-column.tex
docs/: TODO.md  TODO2.md
paper/: bench_clang_arm64.csv  bench_gcc_x64.csv  paper.tex  reference.ipynb  references.bib
src/: CMakeLists.txt  debug.cpp  entropy_metrics.hpp  entropy_store.c  entropy_store.hpp  testing.hpp
tests/: aldr.hpp  bench.cpp  c_code.hpp  fast_dice_roller.hpp  fetch.cpp  fetch.hpp  fldr.hpp  fwd.hpp  huber_vargas.hpp  lemire.hpp  mt19937.hpp  sample.cpp  testing.hpp  tests.cpp  von_neumann.hpp  xoshiro128.hpp
